--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=8080 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
